Update Creation and Analysis Scripts

--- a/Creation/01_SoftwareKG_from_files.ipynb
+++ b/Creation/01_SoftwareKG_from_files.ipynb
@@ -24,20 +24,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# path to tagged files\n",
     "tag_path = \"/mnt/storage1/nlp/PMC_OA_PREPRO_LINKS\"\n",
-    "# path to PMC OA JATS\n",
-    "pmc_path = \"/mnt/storage1/nlp/PMC_OA_XML/PMC_OA_XML_LINKS/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "pmc_path = \"/mnt/storage1/nlp/PMC_OA_XML/PMC_OA_XML_LINKS/\"\n",
+    "\n",
     "# final graph URL\n",
-    "base_url = \"http://data.gesis.org/softwarekg2/\"\n",
+    "base_url = \"http://data.gesis.org/softwarekg/PMC/\"\n",
     "\n",
     "context = {\n",
     "    \"schema\": Namespace(\"http://schema.org/\"),\n",
@@ -50,13 +41,15 @@
     "    \"datacite\" : Namespace(\"http://purl.org/spar/datacite/\"),\n",
     "    \"rdf\" : Namespace(\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"),\n",
     "    \"doi\" : Namespace(\"https://doi.org/\"),\n",
-    "    \"skg\" : Namespace(\"http://data.gesis.org/softwarekg2/\"),\n",
+    "    \"skg\" : Namespace(\"http://data.gesis.org/softwarekg/PMC/\"),\n",
+    "    \"skgv\" : Namespace(\"http://data.gesis.org/softwarekg/vocab/\"),\n",
     "    \"bibo\": Namespace(\"http://purl.org/ontology/bibo/\"),\n",
     "    \"skos\": Namespace(\"http://www.w3.org/2004/02/skos/core#\"),\n",
     "    \"dct\": Namespace(\"http://purl.org/dc/terms/\"),\n",
     "    \"dbpedia-owl\": Namespace(\"http://dbpedia.org/ontology/\"),\n",
     "    \"irao\": Namespace(\"http://ontology.ethereal.cz/\")\n",
-    "}"
+    "}\n",
+    "\n"
    ]
   },
   {
@@ -185,15 +178,6 @@
     "            print(row)\n",
     "        \n",
     "print(\"Read {} rows from journal mapping.\".format(len(pmc_info)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(pmc_info.items())[0]"
    ]
   },
   {
@@ -485,7 +469,7 @@
     "        software_info['title'] = meta['title']\n",
     "        \n",
     "    if 'type' in meta:\n",
-    "        g.add((URIRef(article_id), URIRef(\"skg:type\"), Literal(meta['type'])))\n",
+    "        g.add((URIRef(article_id), URIRef(\"skgv:documentType\"), Literal(meta['type'])))\n",
     "        software_info['type'] = meta['type']\n",
     "        \n",
     "    if meta['pmc-id'] in pmc_info:\n",
@@ -628,7 +612,7 @@
     "        \n",
     "        if 'id' in entity:\n",
     "            software_id = \"skg:software/{}\".format(entity['id'])\n",
-    "            g.add((URIRef(mention_id), URIRef(\"skg:software\"), URIRef(software_id)))\n",
+    "            g.add((URIRef(mention_id), URIRef(\"skgv:software\"), URIRef(software_id)))\n",
     "            g.add((URIRef(software_id), RDF.type, URIRef(\"irao:Software\")))\n",
     "            software_info['mentions'].append(entity['id'])\n",
     "        \n",
@@ -644,24 +628,30 @@
     "                        pass \n",
     "                    elif t in ['Creation', 'Usage', 'Deposition', 'Mention']:\n",
     "                        m = {\n",
-    "                            'Creation':'skg:MentionType_Creation',\n",
-    "                            'Usage' : 'skg:MentionType_Usage',\n",
-    "                            'Deposition' : 'skg:MentionType_Deposition',\n",
-    "                            'Mention' : 'skg:MentionType_Allusion'\n",
+    "                            'Creation':'skgv:MentionType_Creation',\n",
+    "                            'Usage' : 'skgv:MentionType_Usage',\n",
+    "                            'Deposition' : 'skgv:MentionType_Deposition',\n",
+    "                            'Mention' : 'skgv:MentionType_Allusion'\n",
     "                        }\n",
-    "                        g.add((URIRef(mention_id), URIRef(\"skg:mentionType\"),URIRef(m[t])))\n",
+    "                        g.add((URIRef(mention_id), URIRef(\"skgv:mentionType\"),URIRef(m[t])))\n",
+    "                        #mention_info['mentiontype'] = m[t]\n",
     "                    elif t in ['ProgrammingEnvironment','Application','OperatingSystem','PlugIn']:\n",
-    "                        g.add((URIRef(mention_id), URIRef(\"skg:softwareType\"),URIRef(\"skg:{}\".format(t))))\n",
+    "                        g.add((URIRef(mention_id), URIRef(\"skgv:softwareType\"),URIRef(\"skgv:{}\".format(t))))\n",
+    "                        #mention_info['softwaretype'] = t\n",
     "                    elif t in ['Version', 'Developer', 'URL', 'Citation', 'Extension', 'Release', 'Abbreviation', \n",
     "                               'Fullname', 'License','AlternativeName']:\n",
-    "                        g.add((URIRef(mention_id), URIRef(\"skg:informationType\"),URIRef(\"skg:{}\".format(t))))\n",
+    "                        g.add((URIRef(mention_id), URIRef(\"skgv:informationType\"),URIRef(\"skgv:{}\".format(t))))\n",
+    "                        #mention_info['infotype'] = t\n",
     "                    else:\n",
     "                        raise Exception('Unknown mention type: {}'.format(t))\n",
     "            else:\n",
-    "                g.add((URIRef(mention_id), URIRef(\"skg:referredToBy{}\".format(key)), URIRef(\"{}/mentions/{}\".format(article_id, value))))\n",
+    "                #print(\"{}:{}\".format(key,value))\n",
+    "                g.add((URIRef(mention_id), URIRef(\"skgv:referredToBy{}\".format(key)), URIRef(\"{}/mentions/{}\".format(article_id, value))))\n",
     "            if 'software' in mention_info:\n",
     "                # we only add software specific rows\n",
     "                software_info['mentions'].append(mention_info)\n",
+    "#        if 'id' in entity:\n",
+    "#            g.add((URIRef(mention_id), URIRef(\"skg:software\"), ))\n",
     "    infos.append(software_info)"
    ]
   },
@@ -676,7 +666,7 @@
     "#%%time\n",
     "g = Graph()\n",
     "\n",
-    "list_of_files = [fn for fn in os.listdir(tag_path) if fn.startswith(\"PMC\") and fn.endswith(\".ann.unique\")]"
+    "list_of_files = [fn for fn in os.listdir(tag_path) if fn.startswith(\"PMC\") and fn.endswith(\".ann.unique\")]\n"
    ]
   },
   {
@@ -697,10 +687,12 @@
     "    \n",
     "    for f in tqdm.tqdm(files[start:n]):\n",
     "        add_paperinfo_to_graph(g, f, data_list)\n",
+    "\n",
     "    g.serialize(format=\"json-ld\", context=context, destination=\"softwarekg_{}-{}.jsonld\".format(start,n))\n",
     "    \n",
     "    ll = [pd.DataFrame(article).drop_duplicates() for article in data_list]\n",
-    "    pd.concat(ll).to_csv('software_in_articles_{}-{}.csv'.format(start,n))\n"
+    "    pd.concat(ll).to_csv('software_in_articles_{}-{}.csv'.format(start,n))\n",
+    "\n"
    ]
   },
   {
