add analyses on host-software and plugins

--- a/SoftwareKG_PMC_Analyses.ipynb
+++ b/SoftwareKG_PMC_Analyses.ipynb
@@ -364,7 +364,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -5042,12 +5044,272 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Top Creation and Deposition Journals"
+    "## PlugIns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "host_software_with_plugins = run_and_cache(query=\"\n",
+    "SELECT\n",
+    "    ?host_software\n",
+    "    COUNT(DISTINCT ?mention) as ?n_host_software_mention\n",
+    "    COUNT(DISTINCT ?plugin_mention) as ?n_plugin_mentions\n",
+    "    COUNT(DISTINCT ?plugin) as ?n_plugins\n",
+    "FROM \n",
+    "    <http://data.gesis.org/softwarekg2> \n",
+    "WHERE\n",
+    "{\n",
+    "    ?article schema:mentions ?mention.\n",
+    "    ?mention skgv:software ?host_software.\n",
+    "    OPTIONAL {\n",
+    "             ?mention skgv:referredToByPlugIn ?plugin_mention.\n",
+    "             ?plugin_mention skgv:software ?plugin. \n",
+    "    }\n",
+    "}\n",
+    "GROUP BY ?host_software\n",
+    "ORDER BY DESC(?n_plugins)\n",
+    "LIMIT 10\", cache.name=\"host_software_with_plugins\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A spec_tbl_df: 10 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>host_software</th><th scope=col>n_host_software_mention</th><th scope=col>n_plugin_mentions</th><th scope=col>n_plugins</th><th scope=col>name</th><th scope=col>max_ratio</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>&lt;http://data.gesis.org/softwarekg/PMC/software/1474942&gt;</td><td>469751</td><td>220745</td><td>19442</td><td><span style=white-space:pre-wrap>R        </span></td><td>1.000000</td></tr>\n",
+       "\t<tr><td>&lt;http://data.gesis.org/softwarekg/PMC/software/1475012&gt;</td><td>160164</td><td> 18616</td><td> 4442</td><td><span style=white-space:pre-wrap>MATLAB   </span></td><td>0.582064</td></tr>\n",
+       "\t<tr><td>&lt;http://data.gesis.org/softwarekg/PMC/software/1480565&gt;</td><td> 57001</td><td> 11688</td><td> 3157</td><td><span style=white-space:pre-wrap>Python   </span></td><td>0.994451</td></tr>\n",
+       "\t<tr><td>&lt;http://data.gesis.org/softwarekg/PMC/software/1475396&gt;</td><td> 13184</td><td><span style=white-space:pre-wrap>  3533</span></td><td> 1449</td><td><span style=white-space:pre-wrap>python   </span></td><td>1.000000</td></tr>\n",
+       "\t<tr><td>&lt;http://data.gesis.org/softwarekg/PMC/software/1513869&gt;</td><td>228140</td><td> 10761</td><td> 1286</td><td><span style=white-space:pre-wrap>ImageJ   </span></td><td>0.748576</td></tr>\n",
+       "\t<tr><td>&lt;http://data.gesis.org/softwarekg/PMC/software/1588559&gt;</td><td>147586</td><td><span style=white-space:pre-wrap>  2190</span></td><td><span style=white-space:pre-wrap>  809</span></td><td><span style=white-space:pre-wrap>Stata    </span></td><td>0.523867</td></tr>\n",
+       "\t<tr><td>&lt;http://data.gesis.org/softwarekg/PMC/software/1476094&gt;</td><td> 21248</td><td><span style=white-space:pre-wrap>  1176</span></td><td><span style=white-space:pre-wrap>  774</span></td><td><span style=white-space:pre-wrap>Perl     </span></td><td>1.000000</td></tr>\n",
+       "\t<tr><td>&lt;http://data.gesis.org/softwarekg/PMC/software/1474910&gt;</td><td>151613</td><td><span style=white-space:pre-wrap>  1946</span></td><td><span style=white-space:pre-wrap>  644</span></td><td><span style=white-space:pre-wrap>Excel    </span></td><td>0.864497</td></tr>\n",
+       "\t<tr><td>&lt;http://data.gesis.org/softwarekg/PMC/software/1475087&gt;</td><td> 39094</td><td><span style=white-space:pre-wrap>  5902</span></td><td><span style=white-space:pre-wrap>  553</span></td><td>Cytoscape</td><td>0.951622</td></tr>\n",
+       "\t<tr><td>&lt;http://data.gesis.org/softwarekg/PMC/software/1475348&gt;</td><td> 35118</td><td><span style=white-space:pre-wrap>  2671</span></td><td><span style=white-space:pre-wrap>  521</span></td><td><span style=white-space:pre-wrap>SPM      </span></td><td>0.994073</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A spec\\_tbl\\_df: 10 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " host\\_software & n\\_host\\_software\\_mention & n\\_plugin\\_mentions & n\\_plugins & name & max\\_ratio\\\\\n",
+       " <chr> & <dbl> & <dbl> & <dbl> & <chr> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t <http://data.gesis.org/softwarekg/PMC/software/1474942> & 469751 & 220745 & 19442 & R         & 1.000000\\\\\n",
+       "\t <http://data.gesis.org/softwarekg/PMC/software/1475012> & 160164 &  18616 &  4442 & MATLAB    & 0.582064\\\\\n",
+       "\t <http://data.gesis.org/softwarekg/PMC/software/1480565> &  57001 &  11688 &  3157 & Python    & 0.994451\\\\\n",
+       "\t <http://data.gesis.org/softwarekg/PMC/software/1475396> &  13184 &   3533 &  1449 & python    & 1.000000\\\\\n",
+       "\t <http://data.gesis.org/softwarekg/PMC/software/1513869> & 228140 &  10761 &  1286 & ImageJ    & 0.748576\\\\\n",
+       "\t <http://data.gesis.org/softwarekg/PMC/software/1588559> & 147586 &   2190 &   809 & Stata     & 0.523867\\\\\n",
+       "\t <http://data.gesis.org/softwarekg/PMC/software/1476094> &  21248 &   1176 &   774 & Perl      & 1.000000\\\\\n",
+       "\t <http://data.gesis.org/softwarekg/PMC/software/1474910> & 151613 &   1946 &   644 & Excel     & 0.864497\\\\\n",
+       "\t <http://data.gesis.org/softwarekg/PMC/software/1475087> &  39094 &   5902 &   553 & Cytoscape & 0.951622\\\\\n",
+       "\t <http://data.gesis.org/softwarekg/PMC/software/1475348> &  35118 &   2671 &   521 & SPM       & 0.994073\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A spec_tbl_df: 10 × 6\n",
+       "\n",
+       "| host_software &lt;chr&gt; | n_host_software_mention &lt;dbl&gt; | n_plugin_mentions &lt;dbl&gt; | n_plugins &lt;dbl&gt; | name &lt;chr&gt; | max_ratio &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| &lt;http://data.gesis.org/softwarekg/PMC/software/1474942&gt; | 469751 | 220745 | 19442 | R         | 1.000000 |\n",
+       "| &lt;http://data.gesis.org/softwarekg/PMC/software/1475012&gt; | 160164 |  18616 |  4442 | MATLAB    | 0.582064 |\n",
+       "| &lt;http://data.gesis.org/softwarekg/PMC/software/1480565&gt; |  57001 |  11688 |  3157 | Python    | 0.994451 |\n",
+       "| &lt;http://data.gesis.org/softwarekg/PMC/software/1475396&gt; |  13184 |   3533 |  1449 | python    | 1.000000 |\n",
+       "| &lt;http://data.gesis.org/softwarekg/PMC/software/1513869&gt; | 228140 |  10761 |  1286 | ImageJ    | 0.748576 |\n",
+       "| &lt;http://data.gesis.org/softwarekg/PMC/software/1588559&gt; | 147586 |   2190 |   809 | Stata     | 0.523867 |\n",
+       "| &lt;http://data.gesis.org/softwarekg/PMC/software/1476094&gt; |  21248 |   1176 |   774 | Perl      | 1.000000 |\n",
+       "| &lt;http://data.gesis.org/softwarekg/PMC/software/1474910&gt; | 151613 |   1946 |   644 | Excel     | 0.864497 |\n",
+       "| &lt;http://data.gesis.org/softwarekg/PMC/software/1475087&gt; |  39094 |   5902 |   553 | Cytoscape | 0.951622 |\n",
+       "| &lt;http://data.gesis.org/softwarekg/PMC/software/1475348&gt; |  35118 |   2671 |   521 | SPM       | 0.994073 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   host_software                                          \n",
+       "1  <http://data.gesis.org/softwarekg/PMC/software/1474942>\n",
+       "2  <http://data.gesis.org/softwarekg/PMC/software/1475012>\n",
+       "3  <http://data.gesis.org/softwarekg/PMC/software/1480565>\n",
+       "4  <http://data.gesis.org/softwarekg/PMC/software/1475396>\n",
+       "5  <http://data.gesis.org/softwarekg/PMC/software/1513869>\n",
+       "6  <http://data.gesis.org/softwarekg/PMC/software/1588559>\n",
+       "7  <http://data.gesis.org/softwarekg/PMC/software/1476094>\n",
+       "8  <http://data.gesis.org/softwarekg/PMC/software/1474910>\n",
+       "9  <http://data.gesis.org/softwarekg/PMC/software/1475087>\n",
+       "10 <http://data.gesis.org/softwarekg/PMC/software/1475348>\n",
+       "   n_host_software_mention n_plugin_mentions n_plugins name      max_ratio\n",
+       "1  469751                  220745            19442     R         1.000000 \n",
+       "2  160164                   18616             4442     MATLAB    0.582064 \n",
+       "3   57001                   11688             3157     Python    0.994451 \n",
+       "4   13184                    3533             1449     python    1.000000 \n",
+       "5  228140                   10761             1286     ImageJ    0.748576 \n",
+       "6  147586                    2190              809     Stata     0.523867 \n",
+       "7   21248                    1176              774     Perl      1.000000 \n",
+       "8  151613                    1946              644     Excel     0.864497 \n",
+       "9   39094                    5902              553     Cytoscape 0.951622 \n",
+       "10  35118                    2671              521     SPM       0.994073 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "host_software_with_plugins %>%\n",
+    "    inner_join(software_names, by=c(\"host_software\"=\"sw\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example for R:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "top_plugins_for_software = run_and_cache(query=\"\n",
+    "SELECT\n",
+    "    ?host_software\n",
+    "    ?plugin\n",
+    "    COUNT(DISTINCT ?plugin_mention) as ?n_plugin\n",
+    "    ?n_overall_plugins\n",
+    "FROM \n",
+    "    <http://data.gesis.org/softwarekg2> \n",
+    "WHERE\n",
+    "{\n",
+    "    ?mention skgv:software ?host_software.\n",
+    "    ?mention skgv:referredToByPlugIn ?plugin_mention.\n",
+    "             ?plugin_mention skgv:software ?plugin. \n",
+    "    FILTER (?host_software=<http://data.gesis.org/softwarekg/PMC/software/1474942>) #R\n",
+    "    {\n",
+    "        SELECT\n",
+    "            ?host_software\n",
+    "            COUNT(DISTINCT ?plugin_mention) as ?n_overall_plugins\n",
+    "        FROM \n",
+    "            <http://data.gesis.org/softwarekg2> \n",
+    "        WHERE\n",
+    "        {\n",
+    "            ?article schema:mentions ?mention.\n",
+    "            ?mention skgv:software ?host_software.\n",
+    "            OPTIONAL {\n",
+    "                ?mention skgv:referredToByPlugIn ?plugin_mention.\n",
+    "                ?plugin_mention skgv:software ?plugin. \n",
+    "            }\n",
+    "            FILTER (?host_software=<http://data.gesis.org/softwarekg/PMC/software/1474942>)\n",
+    "        }\n",
+    "    }\n",
+    "} \n",
+    "GROUP BY ?host_software ?plugin ?n_overall_plugins\n",
+    "ORDER BY DESC(?n_plugin)\n",
+    "LIMIT 5\", cache.name=\"top_plugins_for_software\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 5 × 4</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>host_software</th><th scope=col>n_plugin</th><th scope=col>name</th><th scope=col>rel_num</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>&lt;http://data.gesis.org/softwarekg/PMC/software/1474942&gt;</td><td>10582</td><td>Bioconductor</td><td>0.04793767</td></tr>\n",
+       "\t<tr><td>&lt;http://data.gesis.org/softwarekg/PMC/software/1474942&gt;</td><td> 8027</td><td><span style=white-space:pre-wrap>ggplot 2    </span></td><td>0.03636322</td></tr>\n",
+       "\t<tr><td>&lt;http://data.gesis.org/softwarekg/PMC/software/1474942&gt;</td><td> 7084</td><td><span style=white-space:pre-wrap>lme 4       </span></td><td>0.03209133</td></tr>\n",
+       "\t<tr><td>&lt;http://data.gesis.org/softwarekg/PMC/software/1474942&gt;</td><td> 6835</td><td><span style=white-space:pre-wrap>vegan       </span></td><td>0.03096333</td></tr>\n",
+       "\t<tr><td>&lt;http://data.gesis.org/softwarekg/PMC/software/1474942&gt;</td><td> 5557</td><td><span style=white-space:pre-wrap>DESeq 2     </span></td><td>0.02517384</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 5 × 4\n",
+       "\\begin{tabular}{llll}\n",
+       " host\\_software & n\\_plugin & name & rel\\_num\\\\\n",
+       " <chr> & <dbl> & <chr> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t <http://data.gesis.org/softwarekg/PMC/software/1474942> & 10582 & Bioconductor & 0.04793767\\\\\n",
+       "\t <http://data.gesis.org/softwarekg/PMC/software/1474942> &  8027 & ggplot 2     & 0.03636322\\\\\n",
+       "\t <http://data.gesis.org/softwarekg/PMC/software/1474942> &  7084 & lme 4        & 0.03209133\\\\\n",
+       "\t <http://data.gesis.org/softwarekg/PMC/software/1474942> &  6835 & vegan        & 0.03096333\\\\\n",
+       "\t <http://data.gesis.org/softwarekg/PMC/software/1474942> &  5557 & DESeq 2      & 0.02517384\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 5 × 4\n",
+       "\n",
+       "| host_software &lt;chr&gt; | n_plugin &lt;dbl&gt; | name &lt;chr&gt; | rel_num &lt;dbl&gt; |\n",
+       "|---|---|---|---|\n",
+       "| &lt;http://data.gesis.org/softwarekg/PMC/software/1474942&gt; | 10582 | Bioconductor | 0.04793767 |\n",
+       "| &lt;http://data.gesis.org/softwarekg/PMC/software/1474942&gt; |  8027 | ggplot 2     | 0.03636322 |\n",
+       "| &lt;http://data.gesis.org/softwarekg/PMC/software/1474942&gt; |  7084 | lme 4        | 0.03209133 |\n",
+       "| &lt;http://data.gesis.org/softwarekg/PMC/software/1474942&gt; |  6835 | vegan        | 0.03096333 |\n",
+       "| &lt;http://data.gesis.org/softwarekg/PMC/software/1474942&gt; |  5557 | DESeq 2      | 0.02517384 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  host_software                                           n_plugin name        \n",
+       "1 <http://data.gesis.org/softwarekg/PMC/software/1474942> 10582    Bioconductor\n",
+       "2 <http://data.gesis.org/softwarekg/PMC/software/1474942>  8027    ggplot 2    \n",
+       "3 <http://data.gesis.org/softwarekg/PMC/software/1474942>  7084    lme 4       \n",
+       "4 <http://data.gesis.org/softwarekg/PMC/software/1474942>  6835    vegan       \n",
+       "5 <http://data.gesis.org/softwarekg/PMC/software/1474942>  5557    DESeq 2     \n",
+       "  rel_num   \n",
+       "1 0.04793767\n",
+       "2 0.03636322\n",
+       "3 0.03209133\n",
+       "4 0.03096333\n",
+       "5 0.02517384"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "top_plugins_for_software %>%\n",
+    "    inner_join(software_names, by=c(\"plugin\"=\"sw\")) %>%\n",
+    "    mutate(rel_num= n_plugin/n_overall_plugins) %>%\n",
+    "    select(-plugin, -n_overall_plugins, -max_ratio)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Top Creation and Deposition Journals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5092,7 +5354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -5148,7 +5410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -5371,7 +5633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -5477,7 +5739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {
     "scrolled": false
    },
@@ -5607,7 +5869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -5688,7 +5950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -5959,7 +6221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -6264,7 +6526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6343,7 +6605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -6390,7 +6652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -6435,7 +6697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -6488,7 +6750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6515,7 +6777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {
     "scrolled": false
    },
@@ -6801,7 +7063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
