add cast from RDF Literal to string

--- a/Creation/01_SoftwareKG_from_files.ipynb
+++ b/Creation/01_SoftwareKG_from_files.ipynb
@@ -124,8 +124,8 @@
     "            \"eissn\" : row[3],\n",
     "            \"issn\" : row[4]\n",
     "        }\n",
-    "        journal_by_issn[journal['issn']] = journal\n",
-    "        journal_by_eissn[journal['eissn']] = journal\n",
+    "        journal_by_issn[str(journal['issn'])] = journal\n",
+    "        journal_by_eissn[str(journal['eissn'])] = journal\n",
     "        lower_journal = journal['name'].lower().replace('&', 'and').lstrip().rstrip()\n",
     "        journal_by_title[journal['name'].lower().replace('&', 'and').lstrip().rstrip()] = journal\n",
     "    \n",
